# Hindcast

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  entrypoint.sh  fly.toml  package.json  pnpm-lock.yaml
blogs/: m3_e1_doing_nothing.md  m3_e2_ma_crossover.md  m3_e3_mean_reversion.md  m3_e4_funding_carry.md  m3_e5_what_we_learned.md
frontend/: .env.example  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: EquityChart.tsx  LangSwitcher.tsx  PriceChart.tsx  RunBadges.tsx  Sparkline.tsx
frontend/src/lib/: api.ts  i18n.tsx  runStatus.ts
frontend/src/routes/: __root.tsx  chart.tsx  index.tsx  markets.tsx
research/: pyproject.toml
research/hindcast/: __init__.py  cli.py  config.py  markets.toml
research/hindcast/api/: __init__.py  main.py  models.py
research/hindcast/api/routes/: __init__.py  health.py  markets.py  overview.py  runs.py
research/hindcast/backtest/: engine.py  execution.py  metrics.py  portfolio.py  report.py  strategy.py  types.py
research/hindcast/backtest/strategies/: bollinger_meanrev.py  buy_and_hold.py  ma_crossover.py
research/hindcast/data/: fetcher.py  markets.py  schema.py  storage.py  sync.py
research/hindcast/exec/: __init__.py  binance_client.py  live_engine.py  worker.py
research/notebooks/: m2_first_backtest.ipynb  m3_e1_baseline.ipynb  m3_e2_ma_crossover.ipynb  m3_e3_bollinger.ipynb  m3_e4_funding_rate.ipynb  m3_e5_meta.ipynb
research/scripts/: bootstrap_btc.py  build_demo_db.py  hello.py  probe_binance.py  smoke_ccxt.py  sync_funding.py  testnet_check.py
research/tests/: test_engine.py  test_execution.py  test_fetcher.py  test_metrics.py  test_portfolio.py  test_storage.py  test_strategies.py  test_types.py
(+2 files in other folders)
