[project]
name = "hindcast"
version = "0.1.0"
description = "Crypto quant research toolkit"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4.0",
    "pandas>=2.2.0",
    "duckdb>=1.1.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "pytz>=2026.1.post1",
    "matplotlib>=3.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pyright>=1.1.385",
    "pytest>=8.3.0",
    "ipykernel>=6.29.0",
    "nbconvert>=7.17.1",
]

[project.scripts]
hindcast = "hindcast.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hindcast"]

# ===== Ruff =====
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles it)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]      # 脚本里 import 顺序更宽松
"tests/*" = ["S101"]         # 测试里允许 assert

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ===== Pyright =====
[tool.pyright]
include = ["hindcast", "scripts", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

# ===== Pytest =====
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
